--- a/css/style.scss
+++ b/css/style.scss
@@ -1,5 +1,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap');
 
+html, body {
+    color: #191919;
+    font-family: 'inter', sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+}
+
+.btn-red {
+    background-color: #ce2c2c;
+    border: 1px solid #191919;
+    color: #191919;
+    text-decoration: none;
+    padding: 8px 25px;
+    font-weight: 700;
+    border-radius: 25px;
+
+    i {
+        margin-left: 8px;
+    }
+}
+
 
 header {
 background-color: rgba(228, 154, 132, 0.466);
