--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,300;9..40,400;9..40,500;9..40,600;9..40,700;9..40,900&family=Inter:wght@300;400;500;600;700;800;900&display=swap");
 html, body {
   color: #191919;
   font-family: "inter", sans-serif;
@@ -7,11 +8,11 @@ html, body {
 }
 
 .btn-red {
-  background-color: #ce2c2c;
+  background-color: #f90000;
   border: 1px solid #191919;
   color: #191919;
   text-decoration: none;
-  padding: 8px 25px;
+  padding: 10px 30px;
   font-weight: 700;
   font-size: 16px;
   border-radius: 25px;
@@ -26,8 +27,28 @@ html, body {
   color: #ffffff;
 }
 
+.btn-transparent {
+  background-color: transparent;
+  border: 1px solid #191919;
+  color: #191919;
+  text-decoration: none;
+  padding: 10px 30px;
+  font-weight: 700;
+  font-size: 16px;
+  border-radius: 25px;
+}
+.btn-transparent i {
+  margin-left: 8px;
+  font-size: 0.85em;
+}
+.btn-transparent:hover {
+  background-color: #191919;
+  border: 1px solid #191919;
+  color: #ffffff;
+}
+
 header {
-  background-color: rgba(228, 154, 132, 0.466);
+  background-color: rgba(247, 195, 176, 0.466);
   padding: 16px;
 }
 header .container {
@@ -98,7 +119,7 @@ header .container .menu .top-menu .social-media a {
   margin-left: 10px;
 }
 header .container .menu .top-menu .social-media a:hover {
-  color: #ffffff;
+  color: rgba(88, 86, 86, 0.537254902);
 }
 header .container .menu .main-menu {
   display: flex;
@@ -127,5 +148,87 @@ header .container .menu .main-menu nav a.active::after, header .container .menu 
 @media (min-width: 2500px) {
   header .container {
     max-width: 2048px;
+  }
+}
+
+.showcase {
+  background-color: rgba(247, 195, 176, 0.466);
+  padding-bottom: 60px;
+}
+.showcase .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.showcase .container .content {
+  text-align: center;
+}
+@media (min-width: 1200px) {
+  .showcase .container .content {
+    text-align: left;
+  }
+}
+.showcase .container .content h1 {
+  font-family: "DM Sans", sans-serif;
+  font-weight: 500;
+  font-size: 45px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+@media (min-width: 768px) {
+  .showcase .container .content h1 {
+    font-size: 70px;
+  }
+}
+@media (min-width: 1200px) {
+  .showcase .container .content h1 {
+    font-size: 80px;
+  }
+}
+@media (min-width: 1400px) {
+  .showcase .container .content h1 {
+    font-size: 75px;
+  }
+}
+.showcase .container .content p {
+  font-size: 18px;
+  padding-top: 0px;
+  padding-bottom: 30px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+@media (min-width: 768px) {
+  .showcase .container .content p {
+    font-size: 27px;
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
+@media (min-width: 1400px) {
+  .showcase .container .content p {
+    font-size: 30px;
+  }
+}
+.showcase .container .content a {
+  margin-right: 0px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  display: block;
+  margin-bottom: 20px;
+}
+@media (min-width: 768px) {
+  .showcase .container .content a {
+    display: inline-block;
+    margin-right: 20px;
+  }
+}
+.showcase .container img {
+  margin-right: -50px;
+  padding-top: 20px;
+  display: none;
+}
+@media (min-width: 1200px) {
+  .showcase .container img {
+    display: block;
   }
 }/*# sourceMappingURL=style.css.map */
