--- a/css/style.css
+++ b/css/style.css
@@ -47,8 +47,13 @@ html, body {
   color: #ffffff;
 }
 
+.section-title {
+  padding-top: 120px;
+  padding-bottom: 90px;
+}
 .section-title p {
   color: #f90000;
+  margin-bottom: 7px;
 }
 .section-title h2 {
   color: #191919;
@@ -245,5 +250,4 @@ header .container .menu .main-menu nav a.active::after, header .container .menu 
 
 .project-and-case .container .section-title {
   text-align: center;
-  margin-bottom: 10px;
 }/*# sourceMappingURL=style.css.map */
