Project and Case section is finished!

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,13 @@ html, body {
   font-weight: 400;
 }
 
+.wrapper-grid {
+  height: 100vh;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto 1fr auto;
+}
+
 .btn-red {
   background-color: #f90000;
   border: 1px solid #191919;
@@ -25,6 +32,26 @@ html, body {
   background-color: #191919;
   border: 1px solid #191919;
   color: #ffffff;
+}
+
+.btn-black {
+  background-color: #191919;
+  border: 1px solid #191919;
+  color: #ffffff;
+  text-decoration: none;
+  padding: 10px 30px;
+  font-weight: 700;
+  font-size: 16px;
+  border-radius: 25px;
+}
+.btn-black i {
+  margin-left: 8px;
+  font-size: 0.85em;
+}
+.btn-black:hover {
+  background-color: #ffffff;
+  border: 1px solid #191919;
+  color: #191919;
 }
 
 .btn-transparent {
@@ -60,6 +87,12 @@ html, body {
   font-family: "DM Sans", sans-serif;
   font-weight: 700;
   font-size: 45px;
+}
+
+.center-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 header {
@@ -250,9 +283,66 @@ header .container .menu .main-menu nav a.active::after, header .container .menu 
 
 .project-and-case .container .section-title {
   text-align: center;
+  padding-top: 70px;
+  padding-bottom: 45px;
+}
+@media (min-width: 768px) {
+  .project-and-case .container .section-title {
+    padding-top: 120px;
+    padding-bottom: 90px;
+  }
 }
 .project-and-case .container .project-and-cases {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr;
   gap: 30px;
+}
+@media (min-width: 768px) {
+  .project-and-case .container .project-and-cases {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+.project-and-case .container .project-and-cases .project {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto 1fr auto;
+  color: #191919;
+  text-decoration: none;
+}
+.project-and-case .container .project-and-cases .project img {
+  width: 100%;
+}
+@media (max-width: 992px) {
+  .project-and-case .container .project-and-cases .project img {
+    height: auto;
+  }
+}
+.project-and-case .container .project-and-cases .project h3 {
+  font-family: "DM Sans", sans-serif;
+  font-weight: 700;
+  font-size: 22px;
+  padding-top: 30px;
+  padding-bottom: 15px;
+  border-bottom: 1px solid rgba(102, 102, 102, 0.4);
+}
+.project-and-case .container .project-and-cases .project .readmore {
+  padding: 15px 15px;
+  margin-right: 15px;
+  display: block;
+  text-align: right;
+  font-family: "inter", sans-serif;
+  font-size: 14px;
+  font-weight: 500;
+  text-decoration: none;
+  color: #191919;
+}
+.project-and-case .container .project-and-cases .project .readmore i {
+  margin-left: 3px;
+}
+.project-and-case .container .project-and-cases .project:hover .readmore {
+  text-decoration: underline;
+}
+.project-and-case .container .center-content {
+  margin-top: 50px;
+  margin-bottom: 90px;
 }/*# sourceMappingURL=style.css.map */
