--- a/css/style.scss
+++ b/css/style.scss
@@ -16,7 +16,7 @@ html, body {
 }
 
 .btn-red {
-    background-color: #f90000;
+    background-color: #f9d783;
     border: 1px solid #191919;
     color: #191919;
     text-decoration: none;
@@ -108,7 +108,7 @@ html, body {
 }
 
 header {
-background-color: rgba(247, 195, 176, 0.466);
+background-color: #f0efe9;
 padding: 16px;
 
 .container {
@@ -235,8 +235,16 @@ gap: 70px;
 
 
 .showcase {
-    background-color: rgba(247, 195, 176, 0.466);
-    padding-bottom: 60px;
+    background-color: #f0efe9;
+    padding-bottom: 120px;
+    position: relative;
+    z-index: 0;
+
+    .background-lines {
+        position: absolute;
+        bottom: 0;
+        z-index: -1;
+    }
     .container {
         display: flex;
         justify-content: space-between;
@@ -396,4 +404,43 @@ gap: 70px;
         }
     }
 
+}
+
+.newsletter {
+    background-color: #f0efe9;
+    position: relative;
+    padding-top: 80px;
+    padding-bottom: 90px;
+
+    .background-lines-right {
+        position: absolute;
+        bottom: 0px;
+        right: 0;
+    }
+    .container {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        h2 {
+            font-family: 'DM sans', sans-serif;
+            font-size: 45px;
+            font-weight: 700;
+
+        }
+
+        form {
+            input {
+                color: #191919;
+                text-decoration: none;
+                padding: 10px 30px;
+                font-size: 16px;
+                border-radius: 25px;
+                outline: none;
+                border: 1px solid #dad9d3;
+                margin-right: 20px;
+            }
+
+        }
+    }
 }
