--- a/css/style.scss
+++ b/css/style.scss
@@ -444,3 +444,26 @@ gap: 70px;
         }
     }
 }
+
+.meet-our-team {
+    .container {
+        .section-title {
+            //text-align: center;
+            padding-top: 70px;
+            padding-bottom: 45px;
+
+        }
+        .meet-our-team-members {
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr 1fr;
+            gap: 30px;
+        }
+        .members {
+            display: grid;
+                grid-template-columns: 1fr;
+                grid-template-rows: auto 1fr auto;
+                color: #191919;
+                text-decoration: none;
+        }
+    }
+}
