--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,300;9..40,400;9..40,500;9..40,600;9..40,700;9..40,900&family=Inter:wght@300;400;500;600;700;800;900&display=swap");
 html, body {
@@ -386,19 +387,101 @@ header .container .menu .main-menu nav a.active::after, header .container .menu 
   margin-right: 20px;
 }
 
+.meet-our-team {
+  background-color: #edcf87;
+}
+.meet-our-team .container {
+  position: relative;
+  height: 1400px;
+}
 .meet-our-team .container .section-title {
   padding-top: 70px;
   padding-bottom: 45px;
+}
+.meet-our-team .container .dot-container {
+  display: flex;
+  position: absolute;
+  justify-content: center;
+  align-items: center;
+  top: 56%; /* Placera prickarna i mitten vertikalt */
+  left: 50%; /* Placera prickarna i mitten horisontellt */
+  transform: translate(-50%, -50%); /* Centrera prickarna korrekt */
+}
+.meet-our-team .container .dot {
+  width: 10px; /* Justera bredden efter behov */
+  height: 10px; /* Justera höjden efter behov */
+  background-color: #C3AB71; /* Svart färg */
+  border-radius: 50%; /* Gör den rund */
+  margin: 0 5px; /* Avstånd mellan prickarna */
+}
+.meet-our-team .container .black-dot {
+  background-color: #191919; /* Ändra bakgrundsfärgen till röd */
+  /* Andra stilar för den röda punkten om det behövs */
 }
 .meet-our-team .container .meet-our-team-members {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   gap: 30px;
 }
+.meet-our-team .container .btn-red {
+  position: absolute; /* Sätt position: absolute på knappen */
+  top: 100px; /* Placera knappen längst upp */
+  right: 0; /* Placera knappen längst till höger */
+}
 .meet-our-team .container .members {
   display: grid;
+  justify-content: space-between;
   grid-template-columns: 1fr;
   grid-template-rows: auto 1fr auto;
   color: #191919;
   text-decoration: none;
+  position: relative;
+}
+.meet-our-team .container .members h3 {
+  font-family: "DM Sans";
+  font-weight: 700;
+  font-size: 22px;
+  padding-top: 30px;
+  padding-bottom: 10px;
+}
+.meet-our-team .container .members p {
+  font-family: "inter";
+  font-size: 16px;
+  color: rgba(25, 25, 25, 0.6980392157);
+}
+
+.testimonial {
+  height: 500px; /* Justera höjden efter behov */
+  width: 95%; /* Justera bredden efter behov */
+  background-color: #ffffff;
+  margin: 100px auto; /* Centrera horisontellt */
+  text-align: center; /* Centrera innehållet vertikalt */
+  padding: 50px;
+  padding-top: 50px;
+  justify-content: flex-start;
+  display: flex;
+  flex-direction: column;
+}
+.testimonial .section-title {
+  align-self: center;
+}
+.testimonial .testimonial-content {
+  display: grid;
+  grid-column-gap: 20px;
+  text-align: center;
+}
+.testimonial .stars {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr; /* Dela upp i tre fraktioner */
+  grid-row-gap: 60px;
+}
+.testimonial .stars .star-group {
+  grid-template-columns: 1fr 1fr 1fr;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.testimonial .stars .star-group p {
+  font-size: 16px;
+  margin: 0;
 }/*# sourceMappingURL=style.css.map */
