--- a/css/style.css
+++ b/css/style.css
@@ -392,7 +392,7 @@ header .container .menu .main-menu nav a.active::after, header .container .menu 
 }
 .meet-our-team .container {
   position: relative;
-  height: 1400px;
+  height: 1750px;
 }
 .meet-our-team .container .section-title {
   padding-top: 70px;
@@ -403,7 +403,7 @@ header .container .menu .main-menu nav a.active::after, header .container .menu 
   position: absolute;
   justify-content: center;
   align-items: center;
-  top: 56%; /* Placera prickarna i mitten vertikalt */
+  top: 45%; /* Placera prickarna i mitten vertikalt */
   left: 50%; /* Placera prickarna i mitten horisontellt */
   transform: translate(-50%, -50%); /* Centrera prickarna korrekt */
 }
@@ -451,7 +451,7 @@ header .container .menu .main-menu nav a.active::after, header .container .menu 
 }
 
 .testimonial {
-  height: 500px; /* Justera höjden efter behov */
+  height: 800px; /* Justera höjden efter behov */
   width: 95%; /* Justera bredden efter behov */
   background-color: #ffffff;
   margin: 100px auto; /* Centrera horisontellt */
@@ -467,21 +467,48 @@ header .container .menu .main-menu nav a.active::after, header .container .menu 
 }
 .testimonial .testimonial-content {
   display: grid;
+  grid-row-gap: 20px;
   grid-column-gap: 20px;
   text-align: center;
 }
+.testimonial .testimonial-item {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  padding: 20px;
+  text-align: left;
+}
 .testimonial .stars {
-  display: grid;
+  display: flex;
   grid-template-columns: 1fr 1fr 1fr; /* Dela upp i tre fraktioner */
-  grid-row-gap: 60px;
+  grid-row-gap: 100px;
 }
 .testimonial .stars .star-group {
   grid-template-columns: 1fr 1fr 1fr;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   flex-direction: column;
 }
 .testimonial .stars .star-group p {
-  font-size: 16px;
+  font-size: 18px;
   margin: 0;
+  padding: 17px 0px;
+  margin-right: 15px;
+  display: flex;
+  text-align: left;
+  font-family: "inter", sans-serif;
+  font-weight: 500;
+  text-decoration: none;
+  color: #191919;
+}
+.testimonial .stars .star-group img {
+  max-width: 100%;
+  height: auto;
+  display: flex;
+  margin-top: 10px; /* Avstånd mellan text och profilbild */
+}
+.testimonial .center-content {
+  margin-top: 10px;
+  margin-bottom: 25px;
 }/*# sourceMappingURL=style.css.map */
