--- a/css/style.scss
+++ b/css/style.scss
@@ -449,7 +449,7 @@ gap: 70px;
     background-color: #edcf87;
     .container {
         position: relative;
-        height: 1400px;
+        height: 1750px;
         
         .section-title {
             padding-top: 70px;
@@ -462,7 +462,7 @@ gap: 70px;
             position: absolute;
             justify-content: center;
             align-items: center;
-            top: 56%; /* Placera prickarna i mitten vertikalt */
+            top: 45%; /* Placera prickarna i mitten vertikalt */
             left: 50%; /* Placera prickarna i mitten horisontellt */
             transform: translate(-50%, -50%); /* Centrera prickarna korrekt */
             
@@ -522,7 +522,7 @@ gap: 70px;
 }
 
 .testimonial {
-    height: 500px; /* Justera höjden efter behov */
+    height: 800px; /* Justera höjden efter behov */
     width: 95%; /* Justera bredden efter behov */
             background-color: #ffffff;
             margin: 100px auto; /* Centrera horisontellt */
@@ -541,31 +541,62 @@ gap: 70px;
 
             .testimonial-content {
                 display: grid;
-                
+                grid-row-gap: 20px;
                 grid-column-gap: 20px;
                 text-align: center;
             }
 
+            .testimonial-item {
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
+                justify-content: center;
+            padding: 20px;
+            text-align: left;
+            }
+
             .stars {
-                display: grid;
+                display: flex;
                 grid-template-columns: 1fr 1fr 1fr; /* Dela upp i tre fraktioner */
-                grid-row-gap: 60px;
+                grid-row-gap: 100px;
+                
 
                 .star-group {
                     grid-template-columns: 1fr 1fr 1fr;
                     justify-content: center;
-                    align-items: center;
+                    align-items: flex-start;
                     flex-direction: column;
+                    
 
                     p {
-                        font-size: 16px;
-    margin: 0;
+                    font-size: 18px;
+                    margin: 0;
+                        
+                    padding: 17px 0px;
+                    margin-right: 15px;
+                    display: flex;
+                    text-align: left;
+                    font-family: 'inter', sans-serif;
+                    
+                    font-weight: 500;
+                    text-decoration: none;
+                    color: #191919;
+                    }
+
+                    img {
+                        max-width: 100%;
+                        height: auto;
+                        display: flex;
+                        margin-top: 10px; /* Avstånd mellan text och profilbild */
                     }
                 }
                 
                 
             }
-             
+            .center-content {
+                margin-top: 10px;
+                margin-bottom: 25px;
+            }
 }
 
 
