--- a/css/style.scss
+++ b/css/style.scss
@@ -599,6 +599,75 @@ gap: 70px;
             }
 }
 
+.consulting-agency {
+    height: 650px;
+    padding-top: 60px;
+    display: grid;
+    align-items: center;
+    grid-template-columns: 1fr 1fr; /* Två kolumner i 1:1 förhållande */
+    //gap: 50px; /* Avstånd mellan rutnäten */
+    width: 100%;
+    .section-title-consulting-agency {
+        h3 {
+            font-family: 'DM Sans', sans-serif;
+            font-weight: 700;
+            font-size: 45px;
+        }
+    
+        p {
+            font-family: 'inter';
+            font-size: 18px;
+            color: #f94d1c;
+        }
+    }
+
+    .container {
+        background-color: #f0efe9;
+        position: flex;
+        padding: 0px 70px;
+
+    }
+
+    .left-grid {
+        display: flex;
+        flex-direction: column;
+        flex: 1;
+        padding-right: 0px;
+        padding-left: 90px;
+    
+    p {
+        font-family: 'DM Sans';
+        color: #191919;
+        font-size: 22px;
+        font-weight: 700;
+        
+    }
+
+    h5 {
+        font-family: 'inter';
+        font-size: 16px;
+        color: rgba(25,25,25,0.6980392156862745 );
+    }
+    img {
+        
+        border-radius: 50%; 
+        border: 1px solid #6666;
+        padding: 5px;
+    }
+}
+.right-grid {
+    flex: 1;
+    display: flex;
+    //margin-left: 100px;
+    //margin-right: 100px;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+   
+    }
+
+
 
         
 
